# rust_blog_api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20240101000000_create_posts.sql
src/: main.rs
src/controllers/: post_controller.rs
src/models/: post.rs
src/routes/: mod.rs
